# Dragon-Seeking-Formula

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Caddyfile  Dockerfile.pipeline  docker-compose.yml  ecosystem.config.cjs  index.html  pyproject.toml  run_daily.sh
.githooks/: commit-msg  pre-commit
config/: lhb_seats_v1.toml
config/rules/: dragon_formula_v1.toml
data/: recap.db  recap_history.js
docs/: upstream-tickflow.md
docs/adr/: 0001-in-engine-uzi-ai-audit.md  0002-recap-db-schema-contract.md  0003-rule-contract-and-conflict-adjudication.md
scripts/: bootstrap-vendor.sh  check-vendor.sh  dev-docker.sh  dev-local.sh  dev-stack.sh  dev.sh  restore-vendor.sh
src/: candidate_policy.py  candidate_store.py  contracts.py  data_quality.py  db.py  execution_policy.py  feature_engineering.py  history_backtrack.py  lhb_quality.py  market_risk.py  ml_pipeline.py  publish_gate.py  publishing.py  recap_engine.py  recap_scheduler.py  render_fragments.py  rule_contract.py  scorer.py  sector_rotation.py  stock_personality.py  trading_calendar.py
src/data_adapters/: __init__.py  a_stock_adapter.py  base_adapter.py  global_stock_adapter.py  thsdk_adapter.py
tests/: conftest.py  test_candidate_policy.py  test_candidate_store.py  test_contracts.py  test_data_adapter_contracts.py  test_data_adapters.py  test_db_migrations.py  test_execution_policy.py  test_feature_engineering.py  test_golden_candidates.py  test_history_backtrack.py  test_lhb_quality.py  test_market_risk.py  test_ml_pipeline.py  test_observation_only_writes.py  test_offline_assets.py  test_publishing.py  test_recap_date_resolution.py  test_recap_pipeline.py  test_recap_scheduler.py  test_rule_contract.py  test_scorer_volume_ratio.py  test_stock_personality.py  test_trading_calendar.py  test_volume_prefetch.py
(+40 files in other folders)
